コマンド実行時のエラーについて記述追加